fixed overflow

--- a/blogr-landing-page-main/style.css
+++ b/blogr-landing-page-main/style.css
@@ -196,12 +196,13 @@ header .desktop-only{
   font-family: 'Overpass', sans-serif;
 }
 body {
-  width: 100vw;
-  min-height: 100vh;
+  width: 100%;
+  height: 100%;
+
 }
 main {
-  width: 100vw;
-  min-height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 /* Navbar and menu */
 nav {
